@startuml
' Domain Model excerpt for US41 – Record vaccine administration
hide circle
skinparam classAttributeIconSize 0

class SNSUser {
    - name
    - date_of_birth
    - sex
    - postal_address
    - phone_number
    - email
    - citizen_card_number
    - sns_user_number
}


class Nurse {

}
class Facility {
       - name
       - postal_adress
       - phone_number
       - email
       - website_adress
       - opening_hours
       - closing_hours
       - max_vaccines_per_hour
   }
class Vaccine {
    - commercial_name
    - brand
    - technology
}

class Waiting_Room{
SNS_User_List
}

class VaccinationProcess {
    - vaccination_date
    - vaccine_type
    - lot_number
    - sns_user_number
}

class RecoveryRoom {
    - recovery_start_time
}

VaccinationProcess --> "1" SNSUser : register in
VaccinationProcess --> "1" Vaccine
VaccinationProcess --> "1" Nurse
SNSUser "*" --> "1" RecoveryRoom : assigned to *
Facility "1" --> "1" RecoveryRoom
Facility "1" --> "1" Waiting_Room
Waiting_Room "1" --> "*" SNSUser

@enduml
